# Console_Chess

./: CMakeLists.txt  README.md
include/: console_view.cpp  game.h  game_state.h  types.h
src/: console_view.cpp  game.cpp  game_state.cpp  main.cpp
